# Caru

./: Cargo.toml  README.md  anki_clone.db
src/: main.rs
src/db/: queries.rs  schema.rs
src/deck/: deck.rs  flashcard.rs  mod.rs
src/spaced_repetition/: algo.rs
src/ui/: mod.rs
