[package]
name = "Caru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.0"
serde = { version = "1.0", features = ["derive"] } 
chrono = "0.4"  
gtk = "0.9"  
gio = "0.9"  
glib = "0.10"